--- a/www/css/index.css
+++ b/www/css/index.css
@@ -24,9 +24,9 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(to bottom, #A7A7A7 0%, #E4E4E4 51%);
-    font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+    background-color:#ffffff;
+   /* background-image:linear-gradient(to bottom, #A7A7A7 0%, #E4E4E4 51%);*/
+    font-family: 'Ubuntu', sans-serif;
     font-size:12px;
     height:100vh;
     margin:0px;
@@ -35,6 +35,7 @@ body {
     padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
     text-transform:uppercase;
     width:100%;
+    overflow: hidden;
 }
 
 /* Portrait layout (default) */
@@ -62,7 +63,7 @@ body {
 }
 
 h1 {
-    font-size:24px;
+    font-size:40px;
     font-weight:normal;
     margin:0px;
     overflow:visible;
@@ -101,10 +102,81 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
-
-
-@media screen and (prefers-color-scheme: dark) {
-    body {
-        background-image:linear-gradient(to bottom, #585858 0%, #1B1B1B 51%);
+    img{
+    width: 100%;
+    padding: 30px 30px 30px 0;
     }
-}
+    .center{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    height: 365px;
+    }
+    .btn{
+    background-color: #2c3e50;
+    }
+    .btn:hover{
+    background-color: #34495e;
+    }
+    .container{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 4px;
+    align-content: center;
+   
+
+
+    }
+    .col.s6{
+    /*padding: 40px;*/
+    }
+    .mb-0{
+    margin-bottom: 0;
+    }
+    .mt-25{
+    margin-top: 25px;
+    }
+    input{
+    /*border-bottom-color: #fff !important;*/
+    color: rgb(0, 0, 0);
+    padding-left:30px;
+    }
+    a{
+    color: rgb(44, 135, 255);
+    }
+    .large.material-icons.icon_blue{
+    font-size: 40px;
+   
+    
+    }
+    .row{
+    margin: 0;
+    }
+    input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea,input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]){
+    box-shadow: none !important;
+    border-bottom:2px solid #6ba3db !important; 
+    }
+
+    .bg-main{
+    background-color: #ffffff;
+    display: flex;
+    min-height: 80vh;
+    flex-direction: column;
+    justify-content: end;
+
+
+
+    
+   
+    
+    }
+    @media(max-width: 992px){
+    .s6:nth-child(1){
+    display: none;
+    }
+    .s6{
+    width: 100% !important;
+    padding: 20px !important;
+    }
+    }
+
