--- a/www/css/index.css
+++ b/www/css/index.css
@@ -26,7 +26,7 @@ body {
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-color:#ffffff;
    /* background-image:linear-gradient(to bottom, #A7A7A7 0%, #E4E4E4 51%);*/
-    font-family: 'Ubuntu', sans-serif;
+   font-family: bicyclette, sans-serif;
     font-size:12px;
     height:100vh;
     margin:0px;
@@ -63,6 +63,7 @@ body {
 }
 
 h1 {
+    color: #418FDE;
     font-size:40px;
     font-weight:normal;
     margin:0px;
@@ -80,7 +81,7 @@ h1 {
 }
 
 .event.listening {
-    background-color:#333333;
+    background-color:#5CB8B2;
     display:block;
 }
 
@@ -113,10 +114,10 @@ h1 {
     height: 365px;
     }
     .btn{
-    background-color: #2c3e50;
+    background-color: #418FDE;
     }
     .btn:hover{
-    background-color: #34495e;
+    background-color: #FF7276;
     }
     .container{
     margin-top: 30px;
@@ -142,9 +143,10 @@ h1 {
     padding-left:30px;
     }
     a{
-    color: rgb(44, 135, 255);
+    color: #5CB8B2;
     }
     .large.material-icons.icon_blue{
+    color: #418FDE;
     font-size: 40px;
    
     
@@ -154,7 +156,7 @@ h1 {
     }
     input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea,input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]){
     box-shadow: none !important;
-    border-bottom:2px solid #6ba3db !important; 
+    border-bottom:2px solid #5CB8B2 !important; 
     }
 
     .bg-main{
